--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     }
   },
   "dependencies": {
+    "angular2": "2.0.0-beta.0",
     "formatstring": "^1.3.0",
-    "nativescript-unit-test-runner": "^0.2.8",
-    "tns-core-modules": "1.5.1"
+    "nativescript-angular": "0.0.20",
+    "parse5": "^1.5.1",
+    "punycode": "^1.4.0",
+    "querystring": "0.2.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "tns-core-modules": "1.5.1",
+    "url": "^0.11.0",
+    "zone.js": "0.5.10"
   },
   "devDependencies": {
     "gulp-copy": "0.0.2",
